nexus/nexus-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: kube-ops
spec:
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
      - name: nexus
        image: sonatype/nexus3:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "2048Mi"
            cpu: "1000m"
        ports:
        - name: nexus
          containerPort: 8081
          protocol: TCP
        volumeMounts:
        - name: nexus-data
          mountPath: /nexus-data
      volumes:
      - name: nexus-data
        hostPath:
          path: /Users/xie/Workspaces/data/nexus-data
---
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: kube-ops
spec:
  type: NodePort
  selector:
    app: nexus
  ports:
  - port: 8081
    targetPort: 8081
---
